@@ -11,10 +11,12 @@ import com.catchsolmind.cheongyeonbe.domain.task.dto.response.TaskTypeListRespon
 import com.catchsolmind.cheongyeonbe.domain.task.entity.TaskType;
 import com.catchsolmind.cheongyeonbe.domain.task.repository.TaskTypeRepository;
 import com.catchsolmind.cheongyeonbe.global.enums.TaskCategory;
+import com.catchsolmind.cheongyeonbe.global.enums.TaskSubCategory;
 import lombok.RequiredArgsConstructor;
 import org.springframework.stereotype.Service;
 import org.springframework.transaction.annotation.Transactional;
 
+import java.util.Collections;
 import java.util.List;
 import java.util.Set;
 import java.util.stream.Collectors;
@@ -30,64 +32,17 @@ public class TaskTypeService {
 
     private static final int DEFAULT_CUSTOM_TASK_POINT = 10;
 
-    /**
-     * 세부 업무 조회
-     * - category: 카테고리 필터 (선택)
-     * - favorite: true면 즐겨찾기만 조회
-     * - q: 검색어 (선택)
-     */
-    public TaskTypeListResponse getTaskTypes(Long memberId, TaskCategory category, Boolean favorite, String q) {
+    public TaskTypeListResponse getTaskTypesByCategory(TaskCategory category, TaskSubCategory subCategory) {
 
         List<TaskType> taskTypes;
 
-        // 즐겨찾기만 조회하는 경우
-        if (Boolean.TRUE.equals(favorite)) {
-            List<MemberFavoriteTaskType> favorites = favoriteRepository.findAllByMember_GroupMemberId(memberId);
-            List<Long> favoriteTaskTypeIds = favorites.stream()
-                    .map(f -> f.getTaskType().getTaskTypeId())
-                    .collect(Collectors.toList());
-
-            if (favoriteTaskTypeIds.isEmpty()) {
-                return TaskTypeListResponse.builder()
-                        .items(List.of())
-                        .build();
-            }
-
-            taskTypes = taskTypeRepository.findByTaskTypeIdIn(favoriteTaskTypeIds);
-
-            // 카테고리 필터 적용
-            if (category != null) {
-                taskTypes = taskTypes.stream()
-                        .filter(t -> t.getCategory() == category)
-                        .collect(Collectors.toList());
-            }
-
-            // 검색어 필터 적용
-            if (q != null && !q.isBlank()) {
-                String searchKeyword = q.toLowerCase();
-                taskTypes = taskTypes.stream()
-                        .filter(t -> t.getName().toLowerCase().contains(searchKeyword))
-                        .collect(Collectors.toList());
-            }
-
+        if (category == null) {
+            taskTypes = taskTypeRepository.findAll();
+        } else if (category == TaskCategory.ETC && subCategory != null) {
+            taskTypes = taskTypeRepository.findByCategoryAndSubCategory(category, subCategory);
         } else {
-            // 일반 조회
-            if (category != null && q != null && !q.isBlank()) {
-                taskTypes = taskTypeRepository.findByCategoryAndNameContaining(category, q);
-            } else if (category != null) {
-                taskTypes = taskTypeRepository.findByCategory(category);
-            } else if (q != null && !q.isBlank()) {
-                taskTypes = taskTypeRepository.findByNameContaining(q);
-            } else {
-                taskTypes = taskTypeRepository.findAll();
-            }
+            taskTypes = taskTypeRepository.findByCategory(category);
         }
-
-        // 즐겨찾기 여부 확인을 위한 Set
-        Set<Long> favoriteTaskTypeIds = favoriteRepository.findAllByMember_GroupMemberId(memberId)
-                .stream()
-                .map(f -> f.getTaskType().getTaskTypeId())
-                .collect(Collectors.toSet());
 
         List<TaskTypeListResponse.TaskTypeItemDto> items = taskTypes.stream()
                 .map(t -> TaskTypeListResponse.TaskTypeItemDto.builder()
@@ -96,9 +51,40 @@ public class TaskTypeService {
                         .subCategory(t.getSubCategory())
                         .name(t.getName())
                         .point(t.getPoint())
-                        .isFavorite(favoriteTaskTypeIds.contains(t.getTaskTypeId()))
+                        .isFavorite(false)
                         .build())
-                .collect(Collectors.toList());
+                .toList();
+
+        return TaskTypeListResponse.builder()
+                .items(items)
+                .build();
+    }
+
+    public TaskTypeListResponse getFavoriteTaskTypes(Long memberId) {
+
+        List<MemberFavoriteTaskType> favorites = favoriteRepository.findAllByMember_GroupMemberId(memberId);
+        List<Long> favoriteTaskTypeIds = favorites.stream()
+                .map(f -> f.getTaskType().getTaskTypeId())
+                .toList();
+
+        if (favoriteTaskTypeIds.isEmpty()) {
+            return TaskTypeListResponse.builder()
+                    .items(List.of())
+                    .build();
+        }
+
+        List<TaskType> taskTypes = taskTypeRepository.findByTaskTypeIdIn(favoriteTaskTypeIds);
+
+        List<TaskTypeListResponse.TaskTypeItemDto> items = taskTypes.stream()
+                .map(t -> TaskTypeListResponse.TaskTypeItemDto.builder()
+                        .taskTypeId(t.getTaskTypeId())
+                        .category(t.getCategory())
+                        .subCategory(t.getSubCategory())
+                        .name(t.getName())
+                        .point(t.getPoint())
+                        .isFavorite(true) // 즐겨찾기 목록이니까 전부 true
+                        .build())
+                .toList();
 
         return TaskTypeListResponse.builder()
                 .items(items)
